# xsl-rs

./: Cargo.toml  README.md
learn/: adjust.md  insert.md
src/: alloc.rs  collections.rs  lib.rs  ptr.rs
src/collections/: fuzzy.rs  rbtree.rs
src/collections/fuzzy/: finder.rs
src/collections/fuzzy/finder/: v1.rs
src/collections/rbtree/: entry.rs  flag.rs  iter.rs  map.rs  node.rs  test.rs
src/collections/rbtree/map/: tests.rs  values.rs
tests/: collections.rs  main.rs
tests/common/: mod.rs
